# bay-harbor-butcher

./: .env.example  .gitignore  Dockerfile  Makefile  QUALITY_REPORT.md  README.md  TESTING.md  app.py  log.txt  pyproject.toml  requirements-base.txt  requirements-cuda.txt  requirements-dev.txt  requirements-rocm.txt  requirements.txt  run-docker.sh  run-local.sh
.github/: sd-uncen.instructions.md
pipelines/: flux.py  stable_diffusion.py
tests/: __init__.py  test_app.py  test_device.py  test_flux.py  test_lora.py  test_stable_diffusion.py
utils/: device.py  lora.py
